objects/Error_Log__c.object
<CustomObject>
    <description>This will log all the error messages if there are any exception thrown from Flow or Apex.</description>
    <fields>
        <fullName>Additional_Info__c</fullName>
        <description>This will have the additional info when exception thrown</description>
        <label>Additional Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Custom_Message__c</fullName>
        <description>This will store the Custom Message when exception thrown</description>
        <label>Custom Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>This message will hold the error message thrown from Exception</description>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Stack_Trace__c</fullName>
        <description>This will have stack trace point for the exception thrown.</description>
        <label>Error Stack Trace</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>This is the source from where exception thrown. Example if it is Apex class then classname-methodname</description>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Error Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Error_Message__c</columns>
        <columns>Source__c</columns>
        <columns>Custom_Message__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Error-{000000}</displayFormat>
        <label>Error Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>